# ILA-OSINT-v2

./: .gitignore  README.md  eslint.config.js  frontend folderstructure.txt  ila.env  index.html  package-lock.json  package.json  requirements.txt  tsconfig.app.json  vite.config.ts
data-sources/defence/: __init__.py
data-sources/news-collector/: .gitignore  Dockerfile  docker-compose.yaml  go.mod  go.sum
data-sources/telegram/: __init__.py  collector.py  config.py  media_downloader.py  parser.py  payload_extractor.py
data-sources/youtube/: __init__.py  collector.py  config.py  continuous_collector.py  parser.py  payload_extractor.py
graph_engine/: faust_app.py
graph_engine/analytics/: centrality.py  community_detection.py  risk_scorer.py  temporal_correlation.py
graph_engine/api/: entity_profile.py  evidence_browser.py  network.py  timeline.py
graph_engine/canonicalization/: engine.py
graph_engine/config/: __init__.py  settings.py
graph_engine/inference/: rules.py
ingestion/: __init__.py  factory.py  kafka_producer.py  metrics.py  models.py  services.py
kafka/: config.py  consumer.py  docker-compose.yml  producer.py  topics.py
ner-pipeline/: pyproject.toml  requirements.txt
ner-pipeline/app/: celery_app.py  config.py
ner-pipeline/app/extractors/: __init__.py  base.py
ner-pipeline/app/extractors/ml/: __init__.py  location.py  organisation.py  person.py
ner-pipeline/app/extractors/regex/: __init__.py  bank_account.py  crypto.py  domain.py  email.py  hashtag.py  ip_address.py  mention.py  phone.py  upi.py
ner-pipeline/app/kafka/: __init__.py  consumer.py
ner-pipeline/app/schemas/: __init__.py  enriched_doc.py  entity_event.py  extracted_entity.py
ner-pipeline/app/services/: muril_client.py
ner-pipeline/app/tasks/: dispatch.py  extractors.py  merge.py  publish.py
ner-pipeline/cmd/: consumer.py
ner-pipeline/scripts/: start_services.ps1
ner-pipeline/tests/integration/: test_pipeline.py
ner-pipeline/tests/unit/: test_extractors.py  test_muril_client.py
processing-pipeline/: .coverage  Dockerfile.triton  docker-compose.dev.yml  pyproject.toml  requirements.txt
processing-pipeline/app/: celery_app.py  config.py
processing-pipeline/app/adapters/: base.py  bhuvan.py  certin.py  nasa.py  news.py  registry.py  telegram.py  youtube.py
processing-pipeline/app/kafka/: consumer.py
processing-pipeline/app/observability/: metrics.py
processing-pipeline/app/schemas/: __init__.py  enriched_doc.py  raw_event.py
processing-pipeline/app/services/: dedup_engine.py  embed_service.py  ocr_service.py
processing-pipeline/app/strategies/: translation.py
processing-pipeline/app/tasks/: dedup.py  embed.py  ocr.py  publish.py  translate.py
processing-pipeline/cmd/: __init__.py  consumer.py
processing-pipeline/models/indictrans2/: config.pbtxt
processing-pipeline/models/indictrans2/1/: model.py
processing-pipeline/models/muril-ner/: config.pbtxt
processing-pipeline/models/muril-ner/1/: model.py
processing-pipeline/scripts/: publish_test_event.py
processing-pipeline/tests/unit/: test_dedup.py  test_translation.py
sample/: ocr.py  run_translation.py
src/: App.css  App.tsx  index.css  main.tsx
tests/: test_ingestion.py
(+213 files in other folders)
