[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ila-ner-pipeline"
version = "0.1.0"
description = "ILA NER pipeline — 12 parallel entity extractors"
requires-python = ">=3.11"
dependencies = [
    # Kafka
    "aiokafka>=0.10.0",
    "kafka-python>=2.0.2",

    # Task queue
    "celery[redis]>=5.3.6",
    "kombu>=5.3.3",

    # Schema + config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Regex entity extraction
    "phonenumbers>=8.13.0",      # Google libphonenumber — Indian number normalization
    "tldextract>=5.1.0",         # domain extraction from URLs
    "pycocotools>=2.0.7",        # crypto address pattern utilities

    # ML NER via Triton
    "tritonclient[http]>=2.44.0",

    # Location enrichment
    "geopy>=2.4.1",              # GeoNames offline lookup wrapper

    # Redis — chord result cache + MuRIL response cache
    "redis>=5.0.1",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[kafka,redis]>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",             # mock httpx calls to Triton in tests
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]