[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ila-processing-pipeline"
version = "0.1.0"
description = "ILA processing pipeline — dedup, translate, OCR, embed"
requires-python = ">=3.11"
dependencies = [
    # Kafka
    "aiokafka>=0.10.0",
    "kafka-python>=2.0.2",

    # Task queue
    "celery[redis]>=5.3.6",
    "kombu>=5.3.3",

    # Schema + config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Deduplication
    "datasketch>=1.6.4",
    "redis>=5.0.1",

    # Language detection
    "lingua-language-detector>=2.0.2",

    # Translation (IndicTrans2 called via Triton HTTP)
    "httpx>=0.27.0",

    # Embeddings
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",

    # OCR
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",

    # Clustering
    "hdbscan>=0.8.33",
    "numpy>=1.26.0",

    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers[kafka,redis]>=4.4.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]